--- a/my.solutions.css
+++ b/my.solutions.css
@@ -7,3 +7,16 @@
     background: red;
 }
 
+
+/* ESERCIZIO 2 */
+.ex-2-square {
+    transition: 2s;
+}
+.ex-2-square:active {
+    width: 100%;
+}
+
+
+
+
+
