--- a/my.solutions.css
+++ b/my.solutions.css
@@ -3,6 +3,7 @@
 .ex-1-square {
     transition: 2s;
 }
+
 .ex-1-square:hover {
     background: red;
 }
@@ -12,11 +13,20 @@
 .ex-2-square {
     transition: 2s;
 }
+
 .ex-2-square:active {
     width: 100%;
 }
 
 
 
+/* ESERCIZIO 3 */
+.ex-3-square {
+    transition: 1s;
+}
+
+.ex-3-square:hover {
+    border-radius: 100%;
+}
 
 
