--- a/my.solutions.css
+++ b/my.solutions.css
@@ -40,3 +40,33 @@
 }
 
 
+/* ESERCIZIO 5 */
+.ex-5-square {
+    transition: 1s;
+}
+
+.ex-5-square:hover {
+    transform: scale(3);
+}
+
+.ex-5-square:active {
+    transform: scale(.5);
+}
+
+
+
+/* ESERCIZIO 6 */
+.ex-6-img:hover {
+    filter: grayscale(1);
+}
+
+
+
+/* ESERCIZIO 7 */
+.ex-7-img {
+    transition: 2s;
+}
+
+.ex-7-img:hover {
+    filter: grayscale(.6) sepia(.5);
+}
