--- a/my.solutions.css
+++ b/my.solutions.css
@@ -68,5 +68,33 @@
 }
 
 .ex-7-img:hover {
-    filter: grayscale(.6) sepia(.5);
+    filter: grayscale(.5) sepia(.5);
 }
+
+
+
+
+
+/* ESERCIZIO 8 */
+.ex-8-img {
+    transition: 2s;
+}
+
+.ex-8-img:hover {
+    filter: grayscale(.5) sepia(.5);
+    border-radius: 20px;
+}
+
+
+
+/* ESERCIZIO 9 */
+.ex-9-img {
+    transition: 2s;
+}
+
+.ex-9-img:hover {
+    filter: grayscale(.5) sepia(.5);
+    border-radius: 20px;
+    transform: scale(1.5);
+}
+
